@@ -1,3 +1,8 @@
+2008-04-17  David S. Miller  <davem@davemloft.net>
+
+	* options.cc (General_options::parse_V): New function.
+	* options.h: Add entries for -V and -Qy.
+
 2008-04-17  Ian Lance Taylor  <iant@google.com>
 
 	* common.cc (Symbol_table::allocate_commons): Remove options
